Sentry Tracing and error logging